--- a/FSharp-Nix.fsproj
+++ b/FSharp-Nix.fsproj
@@ -2,9 +2,8 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-    <RootNamespace>my-project</RootNamespace>
-    <OtherFlags>--sig:signatures.txt</OtherFlags>
+    <TargetFramework>net8.0</TargetFramework>
+    <RootNamespace>simple-c-semantic-checker</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
